# AgentOnVercel

./: .env  .env.example  .gitignore  ExportData.json  README.md  RESEARCH_LOG.md  agent.py  config.py  evaluate_defense.py  evaluator.py  index.html  interactive_demo.py  main.py  markdown_scraper.py  proxy.py  pyproject.toml  render.yaml  requirements.txt  run_scan.py  test.py  test_connection.py  tools.env  vectors.py
Mcp checker/: README.md
Mcp checker/mcp_checker/: __init__.py  config.py  server.py
Mcp checker/mcp_checker/llm/: anthropic.py  factory.py  gemini.py  openai_compatible.py
Mcp checker/mcp_checker/safety/: analyzer.py  prompts.py  schemas.py  scoring.py
Mcp checker/mcp_content_safety_checker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Mcp checker/tests/: test_analyzer.py  test_llm_factory.py
injection-server/: README.md  config.py  prompt_pages.py  requirements.txt  server.py  vectors.py
injection-server/tools/: gen_prompt_pages.py
mcp_checker/: config.py  scraper.py  server.py  webpage_markdown_scraper.py
mcp_checker/llm/: anthropic.py  base.py  content.py  factory.py  gemini.py  json_utils.py  openai_compatible.py
mcp_checker/safety/: __init__.py  analyzer.py  guard_core.py  rules.py  schemas.py
mcp_content_safety_checker.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
tests/: test_analyzer.py  test_llm_content.py  test_llm_factory.py  test_rules.py  test_webpage_markdown_scraper.py
