[project]
name = "mcp-content-safety-checker"
version = "0.1.0"
description = "FastMCP server that classifies scraped content safety for AI agents."
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
mcp-content-safety = "mcp_checker.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
