[project]
name = "mcp-webpage-safety-scanner"
version = "0.1.0"
description = "FastMCP server that finds, scrapes, and checks webpage safety for AI agents."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "ddgs>=9.0.0",
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "markdownify>=0.13.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
webpage-safety-scanner = "mcp_checker.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
